<?xml version="1.0"?>
<package format="2">
    <name>director</name>
    <version>1.0.0</version>
    <description>Director visualisation tool</description>
    <maintainer email="pat@marion.com">Pat Marion</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>java</depend>
    <depend>lcm_catkin</depend>
    <depend>drake</depend>
    <depend>bot_core_lcmtypes</depend>
    <depend>maps_lcmtypes</depend>
    <depend>robotlocomotion_lcmtypes</depend>
    <depend>multisense_utils</depend>
    <depend>image_utils</depend>
</package>

