<?xml version="1.0"?>
<package format="2">
    <name>director</name>
    <version>1.0.0</version>
    <description>Director visualisation tool</description>
    <maintainer email="pat@marion.com">Pat Marion</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>java</depend>
    <depend>bot_core_lcmtypes</depend>
    <depend>vs_lcmtypes</depend>
    <depend>bot_core</depend>
    <depend>bot_param</depend>
    <depend>bot_frames</depend>
    <depend>maps_lcmtypes</depend>
    <depend>drc_lcmtypes</depend>
    <depend>multisense_utils</depend>
    <depend>multisense_image_utils</depend>
    <depend>image_utils</depend>
    <depend>pcl_ros</depend>    
    <depend>pcl_plugin</depend>    
    <depend>forward_kinematics</depend>
    <depend>ctk_python_console</depend>
    <depend>qt_property_browser</depend>
    <depend>python_qt</depend>
    <depend>multi_gait_executor_msgs</depend>
    <depend>quadruped_msgs</depend>
    <depend>vtk_ros</depend>
</package>

